--- a/frontend/src/components/booking/ownerBookings/manageBookings.html
+++ b/frontend/src/components/booking/ownerBookings/manageBookings.html
@@ -49,7 +49,7 @@
                     <h4><strong>End Odometer Value:</strong> {{booking.endOdometerValue}} kms</h4>
                     <h4><strong>Total Distance:</strong> {{booking.endOdometerValue - booking.startOdometerValue}} kms</h4>
                 </div>
-                <button class="btn btn-primary btn-block" ng-click="downloadBillAsPDF()">Download Invoice</button>
+                <button class="btn btn-primary btn-block" ng-click="booking.generatePDF()">Download Invoice</button>
             </div>
         </div>
     </div>
