--- a/frontend/src/components/booking/ownerBookings/manageBookings.html
+++ b/frontend/src/components/booking/ownerBookings/manageBookings.html
@@ -1,4 +1,4 @@
-<button style="margin-left: 20px;" ng-click="back()"><<<</button>
+<back-button></back-button>
 <div ng-init="init()" class="container" style="display: flex; margin-top: 150px; margin-bottom: 20px; justify-content: center; align-items: center; height: 30vh;">
     <div class="panel panel-primary" style="width: 600px; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); animation: fadeIn 0.5s ease-in-out;">
         <div class="panel-heading text-center">
