--- a/frontend/src/components/booking/ownerBookings/ownerBookings.html
+++ b/frontend/src/components/booking/ownerBookings/ownerBookings.html
@@ -1,4 +1,4 @@
-<button style="margin-left: 20px;" ng-click="back()"><<<</button>
+<back-button></back-button>
 <div ng-controller="ownerBookingsCtrl" class="owner-bookings">
     <h1 class="text-center" ng-if="bookings.length > 0">Bidding Requests</h1>
 
