--- a/frontend/src/components/booking/userBookings/userBookings.html
+++ b/frontend/src/components/booking/userBookings/userBookings.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="/frontend/src/components/booking/userBookings/userBookings.css">
 </head>
-<button class="btn btn-secondary m-2" ng-click="back()"><<<</button>
+<back-button></back-button>
 <div class="container-fluid">
     <h1 class="text-center" ng-show="bookings.length > 0">Confirmed Bookings</h1>
     <h1 class="text-center text-muted" ng-show="bookings.length === 0">No bookings scheduled</h1>
