--- a/frontend/src/components/admin/Analytics/analytics.html
+++ b/frontend/src/components/admin/Analytics/analytics.html
@@ -1,84 +1,260 @@
 <div ng-init="init()" class="container-fluid">
-  <h1 class="text-center">Analytics Dashboard</h1>
+    <div class="page-header">
+        <h1 class="text-center"><span class="glyphicon glyphicon-stats"></span> Analytics Dashboard</h1>
+    </div>
+    <!-- Summary Statistics Cards -->
+    <div class="row">
+        <div class="col-md-3">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">
+                        <span class="glyphicon glyphicon-time"></span> Ongoing Bookings
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <h2 class="text-center text-info">{{ongoingBookings}}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-warning">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">
+                        <span class="glyphicon glyphicon-ban-circle"></span> Blocked Users 
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <h2 class="text-center text-warning">{{blockedUsers}}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">
+                        <span class="glyphicon glyphicon-signal"></span> Bidding Conversion ( approved bids / total bids )
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <h2 class="text-center">{{biddingConversionRate}}%</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    
+                    <h3 class="panel-title text-center">
+                        <span class="glyphicon glyphicon-signal"></span> User Engagement percentage (user with at least 1 bid is engaged user)
+                        <br>
+                       
+                        
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <h2 class="text-center">{{userEngagementPercentage}}%</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  <!-- Date Filter Section (For First 4 Charts) -->
-  <div class="row p-3 border rounded shadow-sm bg-light">
-      <div class="col-md-5">
-          <label for="startDate" class="form-label">Start Date:</label>
-          <input type="date" id="startDate" class="form-control" ng-model="startDate">
-      </div>
-      <div class="col-md-5">
-          <label for="endDate" class="form-label">End Date:</label>
-          <input type="date" id="endDate" class="form-control" ng-model="endDate">
-      </div>
-      <div class="col-md-2 text-center">
-          <button class="btn btn-success btn-block" ng-click="filterByDate()">
-              <i class="fa fa-chart-line"></i> Get Analytics
-          </button>
-      </div>
-  </div>
+    <!-- Date Filter Section -->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><span class="glyphicon glyphicon-calendar"></span> Date Range Filter</h3>
+        </div>
+        <div class="panel-body">
+            <form class="form-horizontal">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <label for="startDate" class="col-sm-4 control-label">Start Date:</label>
+                            <div class="col-sm-8">
+                                <input type="date" id="startDate" class="form-control input-sm" ng-model="startDate">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <label for="endDate" class="col-sm-4 control-label">End Date:</label>
+                            <div class="col-sm-8">
+                                <input type="date" id="endDate" class="form-control input-sm" ng-model="endDate">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-primary btn-block" ng-click="filterByDate()">
+                            <span class="glyphicon glyphicon-refresh"></span> Update Analytics
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 
-  <!-- Summary Statistics -->
-  <div class="row text-center mt-3">
-      <div class="col-md-3">
-          <div class="panel panel-info">
-              <div class="panel-heading">Ongoing Bookings</div>
-              <div class="panel-body"><h4>{{ongoingBookings}}</h4></div>
-          </div>
-      </div>
-      <div class="col-md-3">
-          <div class="panel panel-info">
-              <div class="panel-heading">Avg Booking Duration</div>
-              <div class="panel-body"><h4>{{averageBookingDuration}} days</h4></div>
-          </div>
-      </div>
-      <div class="col-md-3">
-          <div class="panel panel-warning">
-              <div class="panel-heading">Blocked Users</div>
-              <div class="panel-body"><h4>{{blockedUsers}}</h4></div>
-          </div>
-      </div>
-      <div class="col-md-3">
-          <div class="panel panel-primary">
-              <div class="panel-heading">Bidding Conversion %</div>
-              <div class="panel-body"><h4>{{biddingConversionRate}}%</h4></div>
-          </div>
-      </div>
-  </div>
+    
 
-  <!-- New Users in Last 30 Days -->
-  <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-          <div class="panel panel-danger">
-              <div class="panel-heading">New Users in Last 30 Days</div>
-              <div class="panel-body text-center"><h4>{{newUsers}}</h4></div>
-          </div>
-      </div>
-  </div>
+   <!-- Top Sellers Table -->
+   <div class="panel panel-success shadow">
+    <div class="panel-heading text-center">
+        <h3 class="panel-title"><span class="glyphicon glyphicon-user"></span> Top 10 Sellers with Most Earnings</h3>
+    </div>
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table table-hover table-striped table-bordered text-center">
+                <thead class="bg-success text-white">
+                    <tr>
+                        <th>Seller Username</th>
+                        <th>Seller Name</th>
+                        <th>Seller Email</th>
+                        <th>Total Earnings</th>
+                        <th>Congratulation Mail</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="seller in top10SellersWithMostEarnings">
+                        <td>{{seller.ownerUsername}}</td>
+                        <td>{{seller.ownerFirstName}} {{seller.ownerLastName}}</td>
+                        <td class="text-primary">{{seller.ownerEmail}}</td>
+                        <td class="text-success">${{seller.totalEarnings + seller.totalFine | number:2}}</td>
+                        <td>
+                            <button class="btn btn-success btn-sm" ng-click="sendCongratulationMail(seller)">Send</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-  <!-- Date-Dependent Charts Section -->
-  <h3 class="text-center text-primary">Date-Dependent Graphs</h3>
-  <div class="row">
-      <div class="col-md-6" ng-repeat="chartId in ['top10Cars','top3Sellers', 'suvVsSedan','top5MostReviewedCars']">
-          <div class="panel panel-primary">
-              <div class="panel-heading text-center">{{ chartId }}</div>
-              <div class="panel-body text-center">
-                  <canvas id="{{chartId}}" width="400" height="400"></canvas>
-              </div>
-          </div>
-      </div>
-  </div>
+<!-- Top Buyers Table -->
+<div class="panel panel-success shadow">
+    <div class="panel-heading text-center">
+        <h3 class="panel-title"><span class="glyphicon glyphicon-user"></span> Top 10 Buyers with Most Bookings</h3>
+    </div>
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table table-hover table-striped table-bordered text-center">
+                <thead class="bg-success text-white">
+                    <tr>
+                        <th>Buyer Username</th>
+                        <th>Buyer Name</th>
+                        <th>Buyer Email</th>
+                        <th>Total Bookings</th>
+                        <th>Buyer City</th>
+                        <th>Send ThankYou Mail</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="buyer in top10BuyersWithMostBookings">
+                        <td>{{buyer.buyerUsername}}</td>
+                        <td>{{buyer.buyerFirstName}} {{buyer.buyerLastName}}</td>
+                        <td class="text-primary">{{buyer.buyerEmail}}</td>
+                        <td class="text-success">{{buyer.count}}</td>
+                        <td class="text-info">{{buyer.buyerCity}}</td>
+                        <td>
+                            <button class="btn btn-success btn-sm" ng-click="sendCongratulationMail(buyer)">Send</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-  <!-- Non-Date-Dependent Charts Section -->
-  <h3 class="text-center text-success">Other Graphs</h3>
-  <div class="row">
-      <div class="col-md-6" ng-repeat="chartId in ['userDescriptionChart','ownersPerCity', 'buyersPerCity']">
-          <div class="panel panel-success">
-              <div class="panel-heading text-center">{{ chartId }}</div>
-              <div class="panel-body text-center">
-                  <canvas id="{{chartId}}" width="400" height="400"></canvas>
-              </div>
-          </div>
-      </div>
-  </div>
+
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">
+                        <span class="glyphicon glyphicon-user"></span> New Users (Last 30 Days)
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <h2 class="text-center text-danger">{{newUsers}}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-md-offset-4">
+            
+        </div>
+    </div>
+
+    <!-- Date-Dependent Charts Section -->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><span class="glyphicon glyphicon-dashboard"></span> Time-Based Analytics</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-6" ng-repeat="chartId in ['top10Cars','userGrowth', 'top3Sellers', 'suvVsSedan','top5MostReviewedCars']">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title text-center">{{chartId | uppercase}}</h4>
+                        </div>
+                        <div class="panel-body">
+                            <canvas id="{{chartId}}" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       <!-- New Section for Map and Heatmap -->
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title"><span class="glyphicon glyphicon-map-marker"></span> Maps and Heatmaps</h3>
+    </div>
+    <div class="panel-body">
+        <!-- Start Row for Map and Heatmap -->
+        <div class="row">
+            <!-- First Column for Map -->
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title text-center"> Owner HeatMap</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="map" style="width: 100%; height: 400px;"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Column for Buyer Heatmap -->
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title text-center">Buyer Heatmap</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div id="buyerHeatMap" style="width: 100%; height: 400px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Row for Map and Heatmap -->
+    </div>
+</div>
+
+        
+    </div>
+
+    <!-- Non-Date-Dependent Charts Section -->
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h3 class="panel-title"><span class="glyphicon glyphicon-stats"></span> General Statistics</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-6" ng-repeat="chartId in ['userDescriptionChart','ownersPerCity', 'buyersPerCity']">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title text-center">{{chartId | uppercase}}</h4>
+                        </div>
+                        <div class="panel-body">
+                            <canvas id="{{chartId}}" width="400" height="400"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
