--- a/frontend/src/components/admin/carApprovals/carApprovals.html
+++ b/frontend/src/components/admin/carApprovals/carApprovals.html
@@ -1,5 +1,92 @@
 <div class="container-fluid px-3" ng-init="init()">
-    <div class="container-fluid text-center">
+    <!-- Car Category Management Section - Now positioned first -->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                <span class="glyphicon glyphicon-tag"></span> Car Category Management
+            </h3>
+        </div>
+        <div class="panel-body">
+            <!-- Add Category Form -->
+            <div class="row">
+                <div class="col-md-8 col-sm-12">
+                    <form ng-submit="addCarCategory()" class="form-horizontal">
+                        <div class="form-group">
+                            <label for="categoryInput" class="control-label col-sm-3">Category Name:</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <input type="text" 
+                                           class="form-control" 
+                                           id="categoryInput"
+                                           ng-model="carCategory" 
+                                           placeholder="Enter category (e.g., SUV, Sedan)"
+                                           ng-change="validateCategory()"
+                                           autocomplete="off">
+                                    <span class="input-group-btn">
+                                        <button type="submit" 
+                                                class="btn btn-success" 
+                                                ng-disabled="categoryError || !carCategory">
+                                            <span class="glyphicon glyphicon-plus"></span> Add
+                                        </button>
+                                    </span>
+                                </div>
+                                <span class="help-block" ng-if="categoryError">
+                                    <span class="text-danger">
+                                        <span class="glyphicon glyphicon-warning-sign"></span> {{categoryError}}
+                                    </span>
+                                </span>
+                                <span class="help-block" ng-if="!categoryError && carCategory">
+                                    <span class="text-success">
+                                        <span class="glyphicon glyphicon-ok"></span> Valid category name
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Categories Table -->
+            <div class="row" style="margin-top: 20px;">
+                <div class="col-md-12">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th width="70%">Category Name</th>
+                                    <th class="text-center">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="category in carCategories">
+                                    <td>{{category.name}}</td>
+                                    <td class="text-center">
+                                        <button class="btn btn-xs btn-danger" ng-click="deleteCarCategory(category._id)">
+                                            <span class="glyphicon glyphicon-trash"></span> Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr ng-if="!carCategories || carCategories.length === 0">
+                                    <td colspan="2" class="text-center">
+                                        <em>No categories available. Add your first category above.</em>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <small class="text-muted">
+                <span class="glyphicon glyphicon-info-sign"></span> 
+                Categories added here will be available when creating or filtering vehicles.
+            </small>
+        </div>
+    </div>
+
+    <!-- Car Approvals Section - Now positioned second -->
+    <div class="container-fluid text-center" ng-if="cars.length === 0">
         <div class="alert alert-warning">
             <i class="fa fa-exclamation-triangle"></i> No Car Approvals
         </div>
